# ekkles

./: .env  Cargo.toml  README.md  flake.nix
db/: init_db.sql
ekkles_cli/: Cargo.toml  README.md
ekkles_cli/src/: main.rs
ekkles_data/: .env  Cargo.toml  README.md
ekkles_data/db/: db_skeletion.sqlite3  fill_test_db.sql  init_db.sql
ekkles_data/src/: bible.rs  database.rs  lib.rs  playlist.rs  song_db.rs  song_xml.rs
ekkles_data/src/bible/: indexing.rs
ekkles_data/src/data/: db.rs  xml_song.rs
ekkles_data/tests/: bible.rs  playlist.rs  song.rs
ekkles_data/tests/common/: mod.rs
src/: bible_picker.rs  components.rs  config.rs  data.rs  error_screen.rs  main.rs  pick_playlist.rs  playlist_editor.rs  presenter.rs  song_picker.rs  update.rs
src/components/: playlist_item_styles.rs
src/data/: bible.rs  db.rs  xml.rs
