[workspace]
resolver = "3"
members = [ "ekkles_cli","ekkles_data"]

[package]
name = "ekkles"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI Framework
iced = {version = "0.13.1", default-features = false, features = ["wgpu", "tokio"]}
# Pro logování událostí v programu
log = {version = "0.4.27"}
pretty_env_logger = {version = "0.5.0"}
# Jednoduchý error handling
anyhow = "1.0.98"
# Pro (pouze) čtení XML souborů
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
ekkles_data = { path = "ekkles_data" }
# Na tokiu už jsem závislý skrze iced a a sqlx, ale abych měl přístup ke věcem z tokia,
# natáhnu si to i přímo ve stejné verzi.
tokio = {version = "1.44.2", features = ["macros", "rt"]}

[dev-dependencies]
# Aby v testech byly přehledné barevné diffy
pretty_assertions = "1.4.1"
