[workspace]
resolver = "3"
members = [ "ekkles_cli","ekkles_data"]

[package]
name = "ekkles"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI Framework
iced = {version = "0.14.0-dev"}
# Pro logování událostí v programu
log = {version = "0.4.27"}
pretty_env_logger = {version = "0.5.0"}
# Jednoduchý error handling
anyhow = "1.0.98"
# Přístup k SQLite databázi, kde jsou uložené písně a bible
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
ekkles_data = { path = "ekkles_data" }
# Na tokiu už jsem závislý skrze iced a a sqlx, ale abych měl přístup ke věcem z tokia,
# natáhnu si to i přímo ve stejné verzi.
tokio = {version = "1.44.2", features = ["macros", "rt"]}

# Potřebuju regexy pro parsování vstupu při výběru biblických pasáží
regex = {version = "1.11.2", default-features = false, features = ["std", "perf", "unicode-gencat"]}
const_format = "0.2.34"

# Aktuální master (ze 02-09-2025), verze 0.13 má chybně v multi-window aplikacích
# (zamrzne event-loop), ale v masteru je to opravené.
[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "ad0e4c53cf5bcd02c110736853dac214ab35edb4" }


[dev-dependencies]
# Aby v testech byly přehledné barevné diffy
pretty_assertions = "1.4.1"
